jackett/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jackett
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"

spec:
  tls:
  - hosts:
    - index.casa.lan
    secretName: casa.lan
  rules:
  - host: index.casa.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: jackett
          servicePort: 9117
